tests/paczka1/small_fuzzy/61944784.err
Error in line 1: S5@9 A294 71,1
Error in line 10: ULIZshvc A294 24,5
